# data-projects-dpx

./: .gitignore  Makefile  README.md  pyproject.toml
docs/: TODO.txt  cli.txt  feats.txt  file-structure.txt  history.txt  issues.txt  special-chars.txt
src/: __main__.py  dps.py
src/cli/: CRUD.txt  create.py  delete.py  read.py  update.py
src/dpx/: __main__.py  dpx_launcher.py
src/dpx/cli/: __init__.py  create.py  delete.py  dev.py  read.py  update.py  util.py
src/dpx/cli/docs/: CRUD.txt  ideal_structure.txt  notes.txt
src/dpx/cli/utils/: url_manager.py  util.py
src/dpx/utils/: config.yml  paths.py  util.py
src/utils/: paths.py  util.py
tests/: test.py
