[project]
name = "dpx"
version = "0.1.0"
description = "CLI tool for data projects."
readme = "README.md"
author = "Alain Khan"
requires-python = ">=3.14"
dependencies = [
    "pandas>=2.3.3",
    "rich>=14.2.0",
    "typer>=0.20.0",
]

[dependency-groups]
dev = [
    "icecream>=2.1.8",
    "ruff>=0.14.7",
]

[project.scripts]
dpx = "src.dpx.dpx_launcher:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

