[project]
name = "dpx"
version = "0.1.0"
description = "CLI tool for data projects."
readme = "README.md"
# author = "Alain Khan"
requires-python = ">=3.13"
dependencies = [
    "certifi>=2025.11.12",
    "kaggle>=1.8.2",
    "nbformat>=5.10.4",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "requests>=2.32.5",
    "rich>=14.2.0",
    "typer>=0.20.0",
    "urllib3>=2.6.0",
]

[dependency-groups]
dev = [
    "icecream>=2.1.8",
    "ruff>=0.14.7",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
pydocstyle.convention = "google"

[project.scripts]
dpx = "src.dpx.dpx_launcher:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

